Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1243,7 +1243,7 @@ Após configurar um novo projeto no Android Studio, é necessário incluir a dep
 Para a versão release, adicione o módulo do Cielo LIO Order Manager SDK nas dependências do Gradle:
 
 ```
-compile 'com.cielo.lio:order-manager:0.17.7-beta
+compile 'com.cielo.lio:order-manager:0.17.11
 ```
 
 > A partir da versão 1.17.7-beta do SDK se tornou necessária a permissão de INTERNET na aplicação cliente.
@@ -1702,6 +1702,47 @@ Fique atento ao local onde o ``` unbind() ``` será executado para evitar proble
 Utilize o método abaixo para finalizar o uso do OrderManager:
 
 ``` orderManager.unbind(); ```
+
+## Informações do terminal
+
+Todas as informações referentes ao terminal, que foram expostas, estão disponíveis no InfoManager
+
+```InfoManager infoManager = new InfoManager();```
+
+### Nível de Bateria
+
+Para consultar o nível de carga da LIO, basta utilizar o métdo abaixo:
+
+```
+infoManager.getBatteryLevel(context);
+```
+    
+> O valor da bateria será retornado em uma `String` contendo um valor de 0 a 100 em caso de sucesso.  
+Em caso de erro a `String` "---" será retornada. 
+
+### Verificar Modelo da LIO
+
+O SDK disponibiliza um método para verificar se seu aplicativo está instalado numa LIO V1 ou V2. Basta acessar da seguinte forma:
+
+``` infoManager.getDeviceModel(); ```
+
+O mesmo irá retornar um enum do tipo `DeviceModel` com o modelo correspondente (`LIO_V1` || `LIO_V2` ).
+
+### Obtendo informações do usuário (EC e Número Lógico)
+
+Através do SDK, é possível recuperar os dados do cliente e número lógico de maneira simples utilizando o método abaixo:
+
+```
+infoManager.getSettings(context);
+``` 
+
+> Esta função, retornará um objeto do tipo Settings onde é possível recuperar as informações do usuário. 
+Abaixo, segue um descritivo de atributos do objeto Setttings.
+
+| ATRIBUTO     | DESCRIÇÃO            | DOMÍNIO |
+|--------------|----------------------|---------|
+| merchantCode | Código do cliente    | String  |
+| logicNumber  | Número lógico da LIO | String  |
 
 ## Impressão [Apenas LIO V2]
 
