Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1716,9 +1716,8 @@ Para consultar o nível de carga da LIO, basta utilizar o métdo abaixo:
 ```
 infoManager.getBatteryLevel(context);
 ```
-    
-> O valor da bateria será retornado em uma `String` contendo um valor de 0 a 100 em caso de sucesso.  
-Em caso de erro a `String` "---" será retornada. 
+
+> O valor da bateria será retornado em uma `Float` contendo um valor de 0 a 1 em caso de sucesso e -1 em caso de erro.
 
 ### Verificar Modelo da LIO
 
