Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1243,7 +1243,7 @@ Após configurar um novo projeto no Android Studio, é necessário incluir a dep
 Para a versão release, adicione o módulo do Cielo LIO Order Manager SDK nas dependências do Gradle:
 
 ```
-compile 'com.cielo.lio:order-manager:0.17.11
+compile 'com.cielo.lio:order-manager:0.17.12
 ```
 
 > A partir da versão 1.17.7-beta do SDK se tornou necessária a permissão de INTERNET na aplicação cliente.
@@ -1713,9 +1713,7 @@ Todas as informações referentes ao terminal, que foram expostas, estão dispon
 
 Para consultar o nível de carga da LIO, basta utilizar o métdo abaixo:
 
-```
-infoManager.getBatteryLevel(context);
-```
+``` infoManager.getBatteryLevel(context); ```
 
 > O valor da bateria será retornado em uma `Float` contendo um valor de 0 a 1 em caso de sucesso e -1 em caso de erro.
 
@@ -1731,17 +1729,15 @@ O mesmo irá retornar um enum do tipo `DeviceModel` com o modelo correspondente 
 
 Através do SDK, é possível recuperar os dados do cliente e número lógico de maneira simples utilizando o método abaixo:
 
-```
-infoManager.getSettings(context);
-``` 
+``` infoManager.getSettings(context); ``` 
 
 > Esta função, retornará um objeto do tipo Settings onde é possível recuperar as informações do usuário. 
 Abaixo, segue um descritivo de atributos do objeto Setttings.
 
 | ATRIBUTO     | DESCRIÇÃO            | DOMÍNIO |
 |--------------|----------------------|---------|
-| merchantCode | Código do cliente    | String  |
-| logicNumber  | Número lógico da LIO | String  |
+| merchantCode | Código do cliente    | `String` |
+| logicNumber  | Número lógico da LIO | `String` |
 
 ## Impressão [Apenas LIO V2]
 
