Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1723,7 +1723,7 @@ O SDK disponibiliza um método para verificar se seu aplicativo está instalado 
 
 ``` infoManager.getDeviceModel(); ```
 
-O mesmo irá retornar um enum do tipo `DeviceModel` com o modelo correspondente (`LIO_V1` || `LIO_V2` ).
+O mesmo irá retornar um enum do tipo `DeviceModel` com o modelo correspondente (`LIO_V1` ou `LIO_V2` ).
 
 ### Obtendo informações do usuário (EC e Número Lógico)
 
