Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1461,7 +1461,7 @@ Segue abaixo a tabela com os dados mais relevantes existentes nesse mapa:
 | 2                         | Transação com cartão de tarja    |
 | 3                         | Transação com cartão contactless |
 
-| Lista de Tipos de Transação                                    |
+| Lista de Tipos de Transação - (Isto não é válido como código primário) |
 | Código                      | Valor                            |
 |-----------------------------|----------------------------------|
 | 4                           | Crédito à vista                  |
