Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1429,7 +1429,7 @@ Segue abaixo a tabela com os dados mais relevantes existentes nesse mapa:
 | changeAmount             | Valor de troco                                                     | 4500                                     |
 | serviceTax               | Taxa de serviço                                                    | 2000                                     |
 | cityState                | Cidade - Estado                                                    | Barueri - SP                             |
-| v40Code                  | Tipo da transação                                                  | 5 (Lista de Tipos de transação)          |
+| v40Code                  | Tipo da transação                                                  | 5 (Lista de Tipos de transação abaixo)   |
 | secondaryProductName     | Nome do produto secundario                                         | PARC. ADM                                |
 | paymentTransactionId     | ID da transação de pagamento                                       | 98437.29102507174                        |
 | pan                      | Número cartão tokenizado (6 primeiros dígitos – 4 últimos dígitos) | 476173-0036                              |
@@ -1444,7 +1444,7 @@ Segue abaixo a tabela com os dados mais relevantes existentes nesse mapa:
 | productName              | forma de pagamento compilada                                       | CREDITO PARCELADO ADM - I                |
 | merchantName             | Nome Fantasia do Estabelecimento Comercial                         | LOJA ON                                  |
 | firstQuotaAmout          | Valor da primeira parcela                                          | 0                                        |
-| cardCaptureType          | Código do tipo de captura do cartão                                | 0 (Lista de Tipos de Captura)            |
+| cardCaptureType          | Código do tipo de captura do cartão                                | 0 (Lista de Tipos de Captura abaixo)     |
 | requestDate              | Data da requisição em milisegundos                                 | 1293857600000                            |
 | boardingTax              | Taxa de embarque                                                   | 1200                                     |
 | applicationId            | Pacote de aplicação                                                | cielo.launcher                           |
