Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1832,14 +1832,14 @@ Para imprimir textos em múltiplas colunas utilize o método ```printMultipleCol
 O método recebe como parâmetro um array de texts a serem impresso, um array com mapas de estilos de impressão, respectivamente e um listener para tratar o retorno da impressão.
 
 ```
-String[] textsToPrint = new String[] { "ALIGN LEFT", "ALIGN CENTER", "ALIGN RIGHT" }
+String[] textsToPrint = new String[] { "Texto alinhado à esquerda.", "Texto centralizado", "Texto alinhado à direita"  }
 
-List<Map<String, Integer>> styles =  new ArrayList<>();
-styles.add(alignLeft);
-styles.add(alignCenter);
-styles.add(alignRight);
+List<Map<String, Integer>> stylesMap =  new ArrayList<>();
+stylesMap.add(alignLeft);
+stylesMap.add(alignCenter);
+stylesMap.add(alignRight);
 
-printerManager.printMultipleColumnText(textsToPrint, styles, printerListener);
+printerManager.printMultipleColumnText(textsToPrint, stylesMap, printerListener);
 
 ```
 
