Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1814,6 +1814,9 @@ String textToPrint = "Texto simples a ser impresso.\n Com múltiplas linhas";
 printerManager.printText(textToPrint, alignLeft, printerListener);
 ```
 
+Resultado final da impressão
+![Impressão Texto Simples]({{ site.baseurl_root }}/images/cielo-lio/printText.jpg)
+
 | Atributo | Descrição | Domínio |
 |----------|-----------|---------|
 | text     | Texto a ser impresso. | `String` |
@@ -1837,6 +1840,9 @@ printerManager.printMultipleColumnText(textsToPrint, stylesMap, printerListener)
 
 ```
 
+Resultado final da impressão
+![Impressão Múltiplas Colunas]({{ site.baseurl_root }}/images/cielo-lio/printColumns.jpg)
+
 | Atributo | Descrição | Domínio |
 |----------|-----------|---------|
 | stringArray     | Lista de textos a serem impressos. | `String[]` |
@@ -1852,6 +1858,9 @@ O método recebe como parâmetro o `bitmap` a ser impresso, um mapa de estilos d
 Bitmap bitmap = BitmapFactory.decodeResource(getResources(), R.drawable.cielo);
 printerManager.printImage(bitmap, alignCenter, printerListener);
 ```
+
+Resultado final da impressão
+![Impressão Imagem]({{ site.baseurl_root }}/images/cielo-lio/printImage.jpg)
 
 | Atributo | Descrição | Domínio |
 |----------|-----------|---------|
