Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1840,6 +1840,7 @@ printerManager.printMultipleColumnText(textsToPrint, stylesMap, printerListener)
 
 ```
 
+
 Resultado final da impressão
 ![Impressão Múltiplas Colunas]({{ site.baseurl_root }}/images/cielo-lio/printColumns.jpg)
 
@@ -1859,8 +1860,13 @@ Bitmap bitmap = BitmapFactory.decodeResource(getResources(), R.drawable.cielo);
 printerManager.printImage(bitmap, alignCenter, printerListener);
 ```
 
-Resultado final da impressão
-![Impressão Imagem]({{ site.baseurl_root }}/images/cielo-lio/printImage.jpg)
+
+| Imagem a ser impressa | Resultado final |
+|-----------------------|-----------------|
+| ![Impressão Imagem]({{ site.baseurl_root }}/images/cielo-lio/printImage.jpg) | ![Impressão Imagem]({{ site.baseurl_root }}/images/cielo-lio/printImage.jpg) |
+
+
+
 
 | Atributo | Descrição | Domínio |
 |----------|-----------|---------|
