--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1815,7 +1815,10 @@ printerManager.printText(textToPrint, alignLeft, printerListener);
 ```
 
 Resultado final da impressão
-![Impressão Texto Simples]({{ site.baseurl_root }}/images/cielo-lio/print-text.png | width=100)
+
+<p align="center">
+    <img src="{{ site.baseurl_root }}/images/cielo-lio/print-text.png" width="100" />
+</p>
 
 | Atributo | Descrição | Domínio |
 |----------|-----------|---------|
