Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1815,10 +1815,7 @@ printerManager.printText(textToPrint, alignLeft, printerListener);
 ```
 
 Resultado final da impressão
-
-<p align="center">
-    <img src="{{ site.baseurl_root }}/images/cielo-lio/print-text.png" width="100" />
-</p>
+![Impressão texto simples]({{ site.baseurl_root }}/images/cielo-lio/print-text.png){:height="50%" width="50%"}
 
 | Atributo | Descrição | Domínio |
 |----------|-----------|---------|
