Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1841,7 +1841,7 @@ printerManager.printMultipleColumnText(textsToPrint, stylesMap, printerListener)
 ```
 
 Resultado final da impressão
-![Impressão Múltiplas Colunas]({{ site.baseurl_root }}/images/cielo-lio/print-columns.png | width=100)
+![Impressão Múltiplas Colunas]({{ site.baseurl_root }}/images/cielo-lio/print-columns.png){:height="50%" width="50%"}
 
 | Atributo | Descrição | Domínio |
 |----------|-----------|---------|
@@ -1861,7 +1861,7 @@ printerManager.printImage(bitmap, alignCenter, printerListener);
 
 | Imagem a ser impressa | Resultado final |
 |-----------------------|-----------------|
-| ![Impressão Imagem]({{ site.baseurl_root }}/images/cielo-lio/cielo.png | width=100) | ![Impressão Imagem]({{ site.baseurl_root }}/images/cielo-lio/print-image.png | width=100) |
+| ![Impressão Imagem]({{ site.baseurl_root }}/images/cielo-lio/cielo.png){:height="50%" width="50%"} | ![Impressão Imagem]({{ site.baseurl_root }}/images/cielo-lio/print-image.png){:height="50%" width="50%"} |
 
 | Atributo | Descrição | Domínio |
 |----------|-----------|---------|
