Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1814,7 +1814,7 @@ String textToPrint = "Texto simples a ser impresso.\n Com múltiplas linhas";
 printerManager.printText(textToPrint, alignLeft, printerListener);
 ```
 
-Resultado final da impressão
+Exemplo de impressão de texto simples
 ![Impressão texto simples]({{ site.baseurl_root }}/images/cielo-lio/print-text.png){:height="50%" width="50%"}
 
 | Atributo | Descrição | Domínio |
