Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1846,7 +1846,7 @@ Resultado final da impressão:
 | Atributo | Descrição | Domínio |
 |----------|-----------|---------|
 | stringArray     | Lista de textos a serem impressos. | `String[]` |
-| style    | Lista de mapa de estilos de impressão | `List Map<String, Int>` |
+| style    | Lista de mapa de estilos de impressão | `List - Map - (String, Int) ` |
 | printerListener | Callback de impressão. | `cielo.sdk.order.PrinterListener` |
 
 ### Impressão de imagem
