Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1685,6 +1685,48 @@ Abaixo é detalhado cada um dos parâmetros enviados no método:
 Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento parcelado:
 ![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcelado.jpg)
 
+### Receber aviso de cancelamento feito na LIO
+
+Toda vez que é feito um cancelamento na LIO utilizando o launcher, o sistema envia um broadcast notificando quaisquer aplicações que estejam registradas sobre o mesmo. Para que sua aplicação seja notificada de um cancelamento, atualize o arquivo `AndroidManifest.xml` conforme o exemplo abaixo:
+
+```
+<application>
+  ...
+  <receiver android:name=".receiver.LIOCancelationBroadcastReceiver">
+            <intent-filter>
+                <action android:name="cielo.action.NOTIFY_TRANSACTION_CANCEL">
+                </action>
+            </intent-filter>
+        </receiver>
+</aplication> 
+```
+
+em seguida, é necessário implementar um BroadcastReceiver para tratar o evento da maneira que for pertinente a sua aplicação:
+
+```
+public class LIOCancelationBroadcastReceiver extends BroadcastReceiver {
+
+    String MY_ACCESS_KEY = "cielo.sdk.sample";
+    String MY_SECRET_ACCESS_KEY = "cielo.sample";
+
+    @Override
+    public void onReceive(Context context, Intent intent) {
+        Log.d("CANCELAMENTO", "Cancelamento Recebido");
+
+        ParcelableOrder order  = intent.getExtras().getParcelable("ORDER");
+        ParcelableTransaction transaction  = intent.getExtras().getParcelable("TRANSACTION");
+
+        if(MY_ACCESS_KEY.equalsIgnoreCase(order.getAccessKey())
+                && MY_SECRET_ACCESS_KEY.equalsIgnoreCase(order.getSecretAccessKey())){
+            Log.d("CANCELAMENTO", "A ordem pertence ao meu aplicativo");
+        } else {
+            Log.d("CANCELAMENTO", "A ordem não pertence ao meu aplicativo. Ignorar");
+        }
+
+    }
+}
+```
+
 ## Listagem de Pedidos
 
 Na listagem de pedidos, é possível obter todas os pedidos (Orders) abertas na Cielo LIO pelo aplicativo do parceiro. Para isso, basta utilizar a função abaixo:
