--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1706,8 +1706,8 @@ em seguida, é necessário implementar um BroadcastReceiver para tratar o evento
 ```
 public class LIOCancelationBroadcastReceiver extends BroadcastReceiver {
 
-    String MY_ACCESS_KEY = "cielo.sdk.sample";
-    String MY_SECRET_ACCESS_KEY = "cielo.sample";
+    String MY_CLIENT_ID = "Seu client id aqui";
+    String MY_ACCESS_KEY = "Seu access key aqui";
 
     @Override
     public void onReceive(Context context, Intent intent) {
