--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1708,19 +1708,20 @@ public class LIOCancelationBroadcastReceiver extends BroadcastReceiver {
 
     String MY_CLIENT_ID = "Seu client id aqui";
     String MY_ACCESS_KEY = "Seu access key aqui";
+    
+    String INTENT_ORDER_KEY = "ORDER";
+    String INTENT_TRANSACTION_KEY = "TRANSACTION";
 
     @Override
     public void onReceive(Context context, Intent intent) {
         Log.d("CANCELAMENTO", "Cancelamento Recebido");
 
-        ParcelableOrder order  = intent.getExtras().getParcelable("ORDER");
-        ParcelableTransaction transaction  = intent.getExtras().getParcelable("TRANSACTION");
-
-        if(MY_ACCESS_KEY.equalsIgnoreCase(order.getAccessKey())
-                && MY_SECRET_ACCESS_KEY.equalsIgnoreCase(order.getSecretAccessKey())){
-            Log.d("CANCELAMENTO", "A ordem pertence ao meu aplicativo");
-        } else {
-            Log.d("CANCELAMENTO", "A ordem não pertence ao meu aplicativo. Ignorar");
+        ParcelableOrder order = intent.getExtras().getParcelable(INTENT_ORDER_KEY);
+        
+        if(MY_ACCESS_KEY.equalsIgnoreCase(order.getAccessKey()) && MY_CLIENT_ID.equalsIgnoreCase(order.getSecretAccessKey())) {
+            
+            ParcelableTransaction transaction  = intent.getExtras().getParcelable(INTENT_TRANSACTION_KEY);
+            
         }
 
     }
