--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1690,6 +1690,7 @@ Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento parc
 Toda vez que é feito um cancelamento na LIO utilizando o launcher, o sistema envia um broadcast notificando quaisquer aplicações que estejam registradas sobre o mesmo. Para que sua aplicação seja notificada de um cancelamento, atualize o arquivo `AndroidManifest.xml` conforme o exemplo abaixo:
 
 ```
+
 <application>
   ...
   <receiver android:name=".receiver.LIOCancelationBroadcastReceiver">
@@ -1699,11 +1700,13 @@ Toda vez que é feito um cancelamento na LIO utilizando o launcher, o sistema en
             </intent-filter>
         </receiver>
 </aplication> 
-```
-
-em seguida, é necessário implementar um BroadcastReceiver para tratar o evento da maneira que for pertinente a sua aplicação:
 
 ```
+
+em seguida, é necessário implementar um `BroadcastReceiver` para tratar o evento da maneira que for pertinente a sua aplicação:
+
+```
+
 public class LIOCancelationBroadcastReceiver extends BroadcastReceiver {
 
     String MY_CLIENT_ID = "Seu client id aqui";
@@ -1714,8 +1717,6 @@ public class LIOCancelationBroadcastReceiver extends BroadcastReceiver {
 
     @Override
     public void onReceive(Context context, Intent intent) {
-        Log.d("CANCELAMENTO", "Cancelamento Recebido");
-
         ParcelableOrder order = intent.getExtras().getParcelable(INTENT_ORDER_KEY);
         
         if(MY_ACCESS_KEY.equalsIgnoreCase(order.getAccessKey()) && MY_CLIENT_ID.equalsIgnoreCase(order.getSecretAccessKey())) {
@@ -1726,6 +1727,7 @@ public class LIOCancelationBroadcastReceiver extends BroadcastReceiver {
 
     }
 }
+
 ```
 
 ## Listagem de Pedidos
