Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1689,7 +1689,7 @@ Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento parc
 
 Toda vez que é feito um cancelamento na LIO utilizando o launcher, o sistema envia um broadcast notificando quaisquer aplicações que estejam registradas sobre o mesmo. Para que sua aplicação seja notificada de um cancelamento, atualize o arquivo `AndroidManifest.xml` conforme o exemplo abaixo:
 
-```
+```xml
 
 <application>
   ...
@@ -1720,11 +1720,8 @@ public class LIOCancelationBroadcastReceiver extends BroadcastReceiver {
         ParcelableOrder order = intent.getExtras().getParcelable(INTENT_ORDER_KEY);
         
         if(MY_ACCESS_KEY.equalsIgnoreCase(order.getAccessKey()) && MY_CLIENT_ID.equalsIgnoreCase(order.getSecretAccessKey())) {
-            
             ParcelableTransaction transaction  = intent.getExtras().getParcelable(INTENT_TRANSACTION_KEY);
-            
         }
-
     }
 }
 
