Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1705,7 +1705,7 @@ Toda vez que é feito um cancelamento na LIO utilizando o launcher, o sistema en
 
 em seguida, é necessário implementar um `BroadcastReceiver` para tratar o evento da maneira que for pertinente a sua aplicação:
 
-```
+```java
 
 public class LIOCancelationBroadcastReceiver extends BroadcastReceiver {
 
