Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1253,7 +1253,7 @@ Adicione essa permissão ao `AndroidManifest.xml` da sua aplicação.
 
 Para utilizar o Cielo LIO Order Manager SDK, é necessário inserir as seguintes credenciais na inicialização do OrderManager:
 
-```
+```java
 Credentials credentials = new Credentials("Seu client id aqui", "Seu accessToken aqui");
 ```
 
@@ -1277,7 +1277,7 @@ Este método permite iniciar o OrderManager, que é responsável pelas principai
 
 Tudo começa com a criação do OrderManager!
 
-```
+```java
 OrderManager orderManager = new OrderManager(credentials, context);
 ```
 
@@ -1294,7 +1294,7 @@ O construtor do OrderManager recebe 2 parâmetros:
 
 Com o método `bind()`, é possível vincular o contexto da aplicação ao SDK. Este serviço é responsável por gerenciar as funções relacionadas com as ordens da LIO
 
-```
+```java
 ServiceBindListener serviceBindListener = new ServiceBindListener() {
 
     @Override public void onServiceBoundError(Throwable throwable) {
@@ -1332,7 +1332,7 @@ A Cielo LIO trabalha com o conceito de Order (pedido). É necessário possuir um
 
 Este método permite criar uma Order (classe Order). Para realizar essa criação, utilize o método createDraftOrder, que disponibilizará uma Order com status DRAFT:
 
-```
+```java
 Order order = orderManager.createDraftOrder("REFERÊNCIA_DO_PEDIDO");
 ```
 
@@ -1342,7 +1342,7 @@ Este método permite que sejam adicionados itens em um pedido.
 
 > **Atenção:** É necessário adicionar no mínimo um item a um pedido para que seja possível dar continuidade ao pagamento.
 
-```
+```java
 // Identificação do produto (Stock Keeping Unit)
 String sku = "2891820317391823";
 String name = "Coca-cola lata";
@@ -1361,7 +1361,7 @@ order.addItem(sku, name, unitPrice, quantity, unityOfMeasure);
 
 Este método permite atualizar o status de um pedido e liberá-lo para pagamento. O objetivo é utilizar este método depois de adicionar todos os itens no pedido.
 
-``` 
+```java
 orderManager.placeOrder(order);
 ```
 
@@ -1387,7 +1387,7 @@ As seguintes ações podem ser notificadas:
 • onCancel - Quando o pagamento é cancelado. 
 • onError - Quando acontece um erro no pagamento do pedido.
 
-```
+```java
 PaymentListener paymentListener = new PaymentListener() {
     @Override
     public void onStart() {
