Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1707,8 +1707,6 @@ Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento parc
 
 Toda vez que é feito um cancelamento na LIO utilizando o launcher, o sistema envia um broadcast notificando quaisquer aplicações que estejam registradas sobre o mesmo. Para que sua aplicação seja notificada de um cancelamento, atualize o arquivo `AndroidManifest.xml` conforme o exemplo abaixo:
 
-```xml
-
 <application>
   ...
   <receiver android:name=".receiver.LIOCancelationBroadcastReceiver">
@@ -1717,9 +1715,7 @@ Toda vez que é feito um cancelamento na LIO utilizando o launcher, o sistema en
                 </action>
             </intent-filter>
         </receiver>
-</aplication> 
-
-```
+</aplication>
 
 em seguida, é necessário implementar um `BroadcastReceiver` para tratar o evento da maneira que for pertinente a sua aplicação:
 
@@ -1894,7 +1890,7 @@ Exemplo de impressão de texto simples:
 | Atributo | Descrição | Domínio |
 |----------|-----------|---------|
 | text     | Texto a ser impresso. | `String` |
-| style    | Mapa de estilos de impressão | `Map<String, Int>` |
+| style    | Mapa de estilos de impressão | ```Map<String, Int>``` |
 | printerListener | Callback de impressão. | `cielo.sdk.order.PrinterListener` |
 
 ### Impressão de múltiplas colunas
@@ -1940,7 +1936,7 @@ printerManager.printImage(bitmap, alignCenter, printerListener);
 | Atributo | Descrição | Domínio |
 |----------|-----------|---------|
 | bitmap     | Imagem a ser impressa. | `Bitmap` |
-| style    | Mapa de estilos de impressão | `Map<String, Int>` |
+| style    | Mapa de estilos de impressão | ```Map<String, Int>``` |
 | printerListener | Callback de impressão. | `cielo.sdk.order.PrinterListener` |
 
 ---
