Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1707,15 +1707,7 @@ Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento parc
 
 Toda vez que é feito um cancelamento na LIO utilizando o launcher, o sistema envia um broadcast notificando quaisquer aplicações que estejam registradas sobre o mesmo. Para que sua aplicação seja notificada de um cancelamento, atualize o arquivo `AndroidManifest.xml` conforme o exemplo abaixo:
 
-<application>
-  ...
-  <receiver android:name=".receiver.LIOCancelationBroadcastReceiver">
-            <intent-filter>
-                <action android:name="cielo.action.NOTIFY_TRANSACTION_CANCEL">
-                </action>
-            </intent-filter>
-        </receiver>
-</aplication>
+![Manifest]({{ site.baseurl_root }}/images/cielo-lio/manifest.jpg)
 
 em seguida, é necessário implementar um `BroadcastReceiver` para tratar o evento da maneira que for pertinente a sua aplicação:
 
