Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -93,7 +93,7 @@ Confira abaixo a tabela com as especificações técnicas da Cielo LIO:
 | Versão               | **LIO V1**                                  | **LIO V2**                                  |
 | Sistema operacional  | Android OS Cielo 5.1.1                      | Android OS Cielo 6.0 (Marshmallow)          |
 | Memória              | 2GB LPDDR3                                  | 1GB LPDDR3                                  |
-| Dual Chip            | Dual SIM Stand-by                           | Dual SIM Stand-by                           |
+| Dual Chip            | Dual SIM Stand-by                           | -                                           |
 | Tipo do SIM Card     | micro SIM (3FF)                             | micro SIM (3FF)                             |
 | Frequência GSM Mhz   | Quad-Band 850/900/1800/1900                 | Quad-Band 850/900/1800/1900                 |
 | Tamanho em polegadas | 5"                                          | 5.5"                                        |
