Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1535,7 +1535,7 @@ Os seguintes campos serão retornados por essa função:
 | id         |identificador do código no sistema. | `Long` |
 | code         | utilizado na função de pagamento. | `String` |
 | name         | Nome do método de pagamento para efeitos de exibição. | `String` |
-| secondaryProducts         | Listagem de códigos de pagamento secundário. ex.: À Vista, Parcelado, etc. | ```ArrayList<<SecondaryProduct>>```   |
+| secondaryProducts         | Listagem de códigos de pagamento secundário. ex.: À Vista, Parcelado, etc. | ```ArrayList<SecondaryProduct>```   |
 
 Com os códigos de pagamentos disponíveis para a Cielo LIO do estabelecimento comercial, basta realizar a chamada de Pagamento Direto informando os códigos dos produtos:
 
