--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1127,7 +1127,7 @@ Requisição do Order Manager
 
 Exemplo de informação enviada pelo Order Manager
 
-```
+```json
 {
     "id": "f9a9e3c0d31445f7ac419642651f0a52",
     "order_id": "ede8f84a8b8645cb8e576a593c25c6ed",
@@ -1149,7 +1149,7 @@ Requisição do Order Manager
 
 Exemplo de informação enviada pelo Order Manager
 
-```
+```json
 {
     "id": "c7b1dfc39f59436fbc55db8b4e360a96",
     "order_id": "ede8f84a8b8645cb8e576a593c25c6ed",
@@ -1178,7 +1178,6 @@ Exemplo de informação enviada pelo Order Manager
         "created_at": "20151020T13:13:29.000Z",
         "updated_at": "20151022T12:13:29.000Z"
     }
-}
 }
 ```
 
