Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1377,14 +1377,7 @@ Existem 4 formas diferentes de chamar o método checkoutOrder:
 
 ![checkoutorder formas](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/checkoutOrder.jpg)
 
-Independende da forma escolhida, você deverá utilizar o seguinte callback como parâmetro do método de `checkoutOrder()` para receber os estados relacionados ao pagamento.
-
-> PaymentListener: Um callback que informa sobre todas as ações tomadas durante o processo de pagamento. 
-As seguintes ações podem ser notificadas:  
-• onStart - Quando se dá o início do pagamento. 
-• onPayment - Quando um pagamento é realizado. Notem que um pedido pode ser pago por mais de um pagamento. 
-• onCancel - Quando o pagamento é cancelado. 
-• onError - Quando acontece um erro no pagamento do pedido.
+Independende da forma escolhida, você deverá utilizar o seguinte callback como parâmetro do método de `checkoutOrder()` para receber os estados relacionados ao pagamento.:
 
 ```java
 PaymentListener paymentListener = new PaymentListener() {
@@ -1408,9 +1401,18 @@ PaymentListener paymentListener = new PaymentListener() {
 };
 ```
 
+> PaymentListener: Um callback que informa sobre todas as ações tomadas durante o processo de pagamento. 
+As seguintes ações podem ser notificadas:  
+• onStart - Quando se dá o início do pagamento. 
+• onPayment - Quando um pagamento é realizado. Notem que um pedido pode ser pago por mais de um pagamento. 
+• onCancel - Quando o pagamento é cancelado. 
+• onError - Quando acontece um erro no pagamento do pedido.
+
 O método `onPayment()` retorna um objeto `Order` com uma lista de `Payment` que possui um HashMap `PaymentFields` com a maioria dos dados da transação.
 Segue abaixo a tabela com os dados mais relevantes existentes nesse mapa:
 
+
+| Payment Fields (atributo do objeto Payment)                                                                                              |
 | Nome do Campo            | Descrição do Campo                                                 | Valor Exemplo                            |
 |--------------------------|--------------------------------------------------------------------|------------------------------------------|
 | clientName               | Nome do Portador                                                   | VISA ACQUIRER TEST CARD 03               |
