--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1411,7 +1411,7 @@ As seguintes ações podem ser notificadas:
 O método `onPayment()` retorna um objeto `Order` com uma lista de `Payment` que possui um HashMap `PaymentFields` com a maioria dos dados da transação.
 Segue abaixo a tabela com os dados mais relevantes existentes nesse mapa:
 
-| Payment Fields (atributo do objeto Payment)                                                                                              |
+| Payment Fields  - (**atributo do objeto Payment**)                                                                                       |
 | Nome do Campo            | Descrição do Campo                                                 | Valor Exemplo                            |
 |--------------------------|--------------------------------------------------------------------|------------------------------------------|
 | clientName               | Nome do Portador                                                   | VISA ACQUIRER TEST CARD 03               |
