Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1734,11 +1734,18 @@ public class LIOCancelationBroadcastReceiver extends BroadcastReceiver {
 
 ## Listagem de Pedidos
 
-Na listagem de pedidos, é possível obter todas os pedidos (Orders) abertas na Cielo LIO pelo aplicativo do parceiro. Para isso, basta utilizar a função abaixo:
+Na listagem de pedidos, é possível obter todas os pedidos (Orders) abertas na Cielo LIO pelo aplicativo do parceiro. 
+Para isso, basta utilizar a função abaixo, que retorna os pedidos de forma paginada:
 
 ```java
+//Busca 10 items da primeira página
 ResultOrders resultOrders = orderManager.retrieveOrders(10, 0); 
 ```
+
+| ATRIBUTO     | DESCRIÇÃO                                    | DOMÍNIO |
+|--------------|----------------------------------------------|-----------|
+| pageSize     | quantidade de items por página               | `Integer` |
+| page         | número da página requistada (iniciando em 0) | `Integer` |
 
 O objeto ResultOrders contém uma lista com todas as ordens abertas assinadas com as credenciais da aplicação.
 
