Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1747,7 +1747,7 @@ ResultOrders resultOrders = orderManager.retrieveOrders(10, 0);
 | pageSize     | quantidade de items por página               | `Integer` |
 | page         | número da página requistada (iniciando em 0) | `Integer` |
 
-O objeto ResultOrders contém uma lista com todas as ordens abertas assinadas com as credenciais da aplicação.
+> O objeto ResultOrders contém uma lista com todas as ordens abertas assinadas com as credenciais da aplicação.
 
 ## Finalizar uso do OrderManager
 
