--- a/_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md
+++ b/_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md
@@ -170,3 +170,24 @@ Abaixo demonstramos como gerar um exemplo em Python
 3 - Pronto. O exemplo Json está convertido para Python
 
 ![]({{ site.baseurl_root }}/images/pcode2.png)
+
+# Collections e Environments  Cielo
+
+Abaixo, listamos as collections e os Environments Cielo. Use-as em seu Postman para realizar testes e integrações.
+
+### Api Cielo Ecommerce
+
+* **Collection** -  <https://www.getpostman.com/collections/139520c8fe2210654d7c>
+
+|Ambiente|URLs|
+|---|---|
+|Sandbox|**Envio de transação**:  https://apisandbox.cieloecommerce.cielo.com.br <br> **Consulta transação**: https://apiquerysandbox.cieloecommerce.cielo.com.br/|
+|Produção|**Envio de transação**: https://api.cieloecommerce.cielo.com.br/ <br> **Consulta transação**: https://apiquery.cieloecommerce.cielo.com.br/|
+
+### Checkout Cielo
+
+* **Collection**  -  <https://www.getpostman.com/collections/97969ec643738aac42f4>
+
+|Ambiente|URLs|
+|---|---|
+|Produção|**Envio de transação**: https://cieloecommerce.cielo.com.br/api|
